# comfyui-mixlab-nodes

./: .gitignore  CNAME  ImageNode.py  LICENSE  ModelNode.py  PromptNode.py  README.md  ScreenShareNode.py  __init__.py  install.bat  pyproject.toml  requirements.txt
app/: image-to-image_1_Wed Dec 27 2023.json
assets/: Image-to-3D_1.json
data/: Product-designer.txt  anime.txt  artist.txt  camera-and-lens.txt  clothes.txt  expressions.txt  extension-node-map.json  image_prompt_example.json  lighting.txt  photographers.txt  profession.txt  space.txt  styles.txt
example/: AIPC大赛模板_4.json  Image-to-Image_2.json  Image-to-Image_2_Sat Dec 30 2023.json  Text-to-Image_1_Sat Dec 30 2023.json  Text-to-Image_3.json  text-to-image_1_Wed Dec 27 2023.json
nodes/: Agent.py  App.py  Audio.py  ChatGPT.py  ClipInterrogator.py  Clipseg.py  FalVideo.py  FishSpeech.py  ImageNode.py  Lama.py  Mask.py  MiniCPMNode.py  P5.py  PromptNode.py  RembgNode.py  ScreenShareNode.py  SenseVoice.py  ShareNode.py  SocialProfile.py  Style.py  TextGenerateNode.py  TripoSR.py  Utils.py  Vae.py  Video.py  Watcher.py  Whisper.py  edit_mask.py  scenedetect.py  scenedetectNode.py  social_profile.json  test.py  vad-websockets-perclient.py
web/: ar.html  index.html  live.html  main.css  threeVisualizer.html
webApp/: ar.html  custom.html  her.html  index.html  threeVisualizer.html
workflow/: 1-workflow.json  2-screeshare.json  3-FloatVideo-workflow.json  3D-workflow.json  4-loadfromlocal-watcher-workflow.json  5-gpt-workflow.json  6-gpt-all-workflow.json  7-camera-workflow.json  LLM_base_workflow.json  (+18 more)
(+96 files in other folders)
